Simplify host-lookup, use environment variable HOST. Fix ecel lookup, docker- hostname Upgrade Generated Swagger docs
