# lme-data-api/lme-value-app.js
@@ -1,11 +1,11 @@
 const port = process.env.PORT;
-let express = require('express');
+const host = process.env.HOST;
+const domain = 'http://' + host + ':' + port + '/';
+const express = require('express');
 const app = express();
-var pretty = require('express-prettify');
-var log = require('ff-log');
-var bodyParser = require('body-parser');
-const hostname = require('os').hostname();
+const bodyParser = require('body-parser');
 app.set('port', port)
+app.set('host', host)
 app.use(require('cors')())
 app.use(bodyParser.json()); // To support JSON-encoded bodies
 app.use(bodyParser.urlencoded({ // To support URL-encoded bodies
@@ -17,8 +17,5 @@ require('./api/value').setup(app)
 require('./api/api-def').setup(app)
 
 app.listen(port, function() {
-    require('dns').lookup(hostname, (err, add, fam) => {
-        let domain = 'http://' + add + ':' + port + '/';
-        console.info('<span>LME DATA: </span><a href="' + domain + 'docs/?url=%2Fapi-docs#!/default/value">data-api</a>\n');
-    })
+    console.info('<span>LME DATA: </span><a href="' + domain + 'docs/?url=%2Fapi-docs#!/default/value">data-api</a>\n');
 });
